include_directories(${CMAKE_SOURCE_DIR}
${Boost_INCLUDE_DIR}
${Boost_INCLUDE_DIR}/python
${EIGEN_INCLUDE_DIR}/eigen3
${FMT_INCLUDE_DIR}
${GSL_INCLUDE_DIR}
${MD5_INCLUDE_DIR}
${Python_INCLUDE_DIR}
${ROOT_INCLUDE_DIR}
${TBB_INCLUDE_DIRS}
${TINYXML2_INCLUDE_DIR}
${UUID_INCLUDE_DIR}
/usr/include
)

cms_rootdict(DataFormatsCandidate src/classes.h src/classes_def.xml)

add_rootdict_rules(DataFormatsCandidate)

add_library(DataFormatsCandidate SHARED ${DataFormatsCandidate_EXTRA_SOURCES}
  src/Candidate.cc
  src/CompositeCandidate.cc
  src/CompositePtrCandidate.cc
  src/CompositeRefBaseCandidate.cc
  src/CompositeRefCandidate.cc
  src/LeafCandidate.cc
  src/LeafRefCandidateT.cc
  src/NamedCompositeCandidate.cc
  src/OverlapChecker.cc
  src/Particle.cc
  src/ShallowCloneCandidate.cc
  src/ShallowClonePtrCandidate.cc
  src/VertexCompositeCandidate.cc
  src/VertexCompositePtrCandidate.cc
)

set_target_properties(DataFormatsCandidate PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

add_dependencies( ALL_LIBS DataFormatsCandidate)

target_include_directories(DataFormatsCandidate PRIVATE ${CMAKE_SOURCE_DIR})

target_include_directories(DataFormatsCandidate PUBLIC
${Boost_INCLUDE_DIR}
${Boost_INCLUDE_DIR}/python
${EIGEN_INCLUDE_DIR}/eigen3
${FMT_INCLUDE_DIR}
${GSL_INCLUDE_DIR}
${MD5_INCLUDE_DIR}
${Python_INCLUDE_DIR}
${ROOT_INCLUDE_DIR}
${TBB_INCLUDE_DIRS}
${TINYXML2_INCLUDE_DIR}
${UUID_INCLUDE_DIR}
/usr/include
)

target_link_libraries(DataFormatsCandidate PUBLIC
DataFormatsCommon
DataFormatsGeometryVector
DataFormatsMath
FWCoreUtilities
ROOT::Core
ROOT::GenVector
ROOT::MathCore
ROOT::MathMore
ROOT::Net
ROOT::RIO
ROOT::Thread
ROOT::Tree
)


add_python_rules(DataFormats/Candidate)

add_script_rules(DataFormats/Candidate)

install( TARGETS DataFormatsCandidate DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR} EXPORT stitched::)

